# tach

./: .cursorrules  .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  README.crates-io.md  README.md
.github/workflows/: bench-skew.yml  bench-speed-windows.yml  bench.yml  ci.yml
benches/: FENCED-VERIFICATION.md  ORDERED-VERIFICATION.md  aggregate-skewmono.py  apple_suspend_probe.rs  bench_data.py  check-inline-parity.py  collect-host-speed-bundle.py  collect-speed-bundle.py  compose-route-observations.py  compose-speed.py  compose-supplemental-speed.py  contention.rs  extract_speed.py  fenced-verify-amd-2s-m7a.json  fenced-verify-intel-2s-m7i.json  host_speed.py  instant.rs  ordered-verify-amd-2s-m7a.json  ordered-verify-intel-2s-m7i.json  release-boundaries.toml  release_chart.py  release_matrix.py  report.py  require-clean-benchmark-source.sh  route-coverage.toml  route_observation.py  run-browser-host-runtime.mjs  run-emscripten-reentry.sh  run-fenced-verify-aws.sh  run-freebsd-retier-test.sh  run-ordered-verify-aws.sh  run-runtime-smoke.sh  run-skewmono-lambda.sh  run-skewmono-local.sh  run-speed-aws.sh  run-speed-criterion.sh  run-speed-freebsd-aws.sh  run-speed-host-runtime.sh  run-speed-lambda.sh  run-speed-local.sh  (+36 more)
benches/emscripten-reentry/: Cargo.toml
benches/emscripten-reentry/src/: main.rs
benches/evidence/: thread-cpu-aarch64-pmccntr-negative.json  thread-cpu-x86-reference-cycles-negative.json
benches/host-runtime-speed/: Cargo.toml
benches/host-runtime-speed/emscripten-shims/: Cargo.toml
benches/host-runtime-speed/emscripten-shims/src/: lib.rs
benches/host-runtime-speed/src/: lib.rs
benches/lambda-speed/: Cargo.toml
benches/lambda-speed/src/: main.rs
benches/probes/: aarch64-thread-pmu.c  emscripten-reentry-pre.js  x86-thread-pmu.c
benches/runtime-smoke/: Cargo.toml
benches/runtime-smoke/src/: lib.rs
docs/: ESCALATIONS.md  PLAN-0.3.0-process-instant-atomic-deadline.md  README.md  ROADMAP.md  STATUS.md  WHY-NOT-AN-ATOMIC.md
docs/decisions/: 0001-charter.md  0002-retained-evidence-admission-and-full-release-claim-gates.md  0003-apple-bare-counter-is-ineligible-for-wall-time-contracts.md  0004-decision-boundary-runtime-proof.md  0005-timer-contracts-eligibility-evidence-classes-and-selection-policy.md  0006-apple-ordered-selects-self-synchronizing-counter.md  0007-instant-contract-refinement.md  0008-rename-global-instant.md  README.md
docs/evidence/: README.md
docs/evidence/providers/remediation-2026-07-12/: README.md
docs/evidence/release/release-approval-76fd4b1-2026-07-14/: README.md  ci-run.txt  local-verification.txt  package-files.txt  publication-artifacts.sha256  release-report-76fd4b1.json
docs/evidence/timers/amd-flip-freebsd-x86-2026-07-15/: README.md
docs/evidence/timers/amd-flip-linux-x86-2026-07-15-2026-07-15/: README.md
docs/evidence/timers/apple-bare-cntvct-2026-07-15/: README.md  criterion-catalyst-post-adoption.txt  probe-catalyst-m1max.txt  probe-catalyst-mini-m4pro.txt  probe.rs
docs/evidence/timers/apple-ordered-survey-2026-07-16/: README.md  survey-catalyst-m1max.txt  survey-catalyst-mini-m4pro.txt
docs/evidence/timers/freebsd-parity-2026-07-16/: README.md  freebsd-wall-selection.json
docs/evidence/timers/graviton4-flip-linux-a64-2026-07-15/: README.md
docs/evidence/timers/primary-linux-2026-07-13/: README.md  route-observations-c7g.json  route-observations-c7i.json  speed-1-c7g.json  speed-2-inteln.json  target-provider-report.json  validation-c7g.json  validation-c7i.json
docs/evidence/timers/primary-speed-campaign-2026-07-17/: README.md  campaign-report.json  speed-0-apple.json  speed-1-c7g.json  speed-2-inteln.json  speed-4-windows.json
docs/evidence/timers/primary-speed-campaign-2026-07-18/: README.md  campaign-report.json  speed-0-apple.json  speed-1-c7g.json  speed-2-inteln.json  speed-4-windows.json
docs/evidence/timers/provider-policy-closure-2026-07-14/: README.md  freebsd-collector-bundle-8968b16.tgz  freebsd-collector-manifest-8968b16.json  freebsd-speed-cell-8968b16.json  freebsd-validation-8968b16.json  target-provider-report-d9da626.json
docs/evidence/timers/provider-proof-ceb69c1-2026-07-14/: README.md  target-provider-proof.txt
docs/evidence/timers/provider-proof-d0fa731/: README.md  target-provider-proof.txt
docs/evidence/timers/refined-primary-speed-campaign-2026-07-17/: README.md  campaign-report.json  speed-0-apple.json  speed-1-c7g.json  speed-2-inteln.json  speed-4-windows.json
docs/evidence/timers/release-candidate-2026-07-14/: README.md  ci-run.txt  local-verification.txt  publication-artifacts.sha256  release-gate-summary.txt  release-report-84c73f7.json
docs/evidence/timers/release-speed-closure-2026-07-14/: README.md  SHA256SUMS  release-report.json  route-observations-v1.json  speed-1-c7g.json  speed-2-inteln.json  speed-4-windows.json  speed-supplemental-browser-negative.json  speed-supplemental-emscripten-node.json  speed-supplemental-emscripten-pthreads.json  speed-supplemental-freebsd-x86_64.json  speed-supplemental-macos-x86_64.json  speed-supplemental-wasi-p1-node.json  (+5 more)
docs/investigations/: aarch64-thread-cpu-runtime-selection.md  apple-bare-cntvct.md  x86-ordered-dispatch.md
docs/objectives/: fastest-timers.md  process-instant.md  prove-timers.md  release-0-2.md  simplify-timers.md
docs/plans/: process-instant-atomic-deadline.md  provider-policy-matrix.md  publish-readiness.md  simplify-and-verify.md  simplify-timers-approval-packet.md  thread-cpu-route-coverage.md  windows-tsc-instant-spec.md
examples/: basic.rs
src/: background.rs  bench.rs  calibration.rs  instant.rs  lib.rs  thread_cpu.rs
src/arch/: aarch64.rs  apple_aarch64.rs  apple_x86_64.rs  direct.rs  emscripten.rs  fallback.rs  freebsd_x86_64.rs  linux_aarch64_wall.rs  linux_clock_wall.rs  linux_vdso.rs  linux_x86_wall.rs  loongarch64.rs  mod.rs  monotonic.rs  powerpc64.rs  riscv64.rs  synced.rs  thread_cpu.rs  thread_cpu_linux_inline.rs  wasm.rs  windows_x86_wall.rs  x86.rs  x86_64.rs
tests/: instant.rs  thread_cpu.rs  thread_cpu_init.rs  thread_cpu_provider.rs
(+19 files in other folders)
