[package]
name = "tach"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.crates-io.md"
authors = ["Spencer Creasey"]
repository = "https://github.com/spence/tach"
description = "Replacement for std::time::Instant that reads the architectural counter directly"
keywords = ["timer", "clock", "benchmark", "profiling", "rdtsc"]
categories = ["hardware-support", "development-tools::profiling"]
exclude = [
  "benches/*.svg",
  "benches/*.png",
  "benches/*.py",
  "BENCHMARKS.md",
]

[dependencies]
# All optional; pulled in only by the bench-internal feature, which is used by
# the benches/ binaries and the out-of-repo Lambda handler.
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
quanta = { version = "0.12.6", optional = true }
minstant = { version = "0.1.7", optional = true }
fastant = { version = "0.1.11", optional = true }
core_affinity = { version = "0.8", optional = true }

[features]
default = []
# OPTIONAL: spawn a background thread that periodically recalibrates the
# tick-to-nanosecond scaling against the platform monotonic clock to correct
# for crystal drift over long uptime. Default interval is 60 seconds;
# configurable at runtime via `tach::set_recalibration_interval`.
#
# WARNING: ENABLING THIS FEATURE BREAKS `#![no_std]` COMPATIBILITY.
# It pulls in `std::thread`, `std::sync::OnceLock`, and `std::time::Duration`
# for the spawn / sleep loop. The default tach build is `#![no_std]`; this is
# the only feature that promotes it to `std`. If you need drift correction on
# a no_std target, call `tach::Instant::recalibrate()` manually from your own
# scheduler — that function is itself no_std-compatible.
recalibrate-background = []
# INTERNAL: exposes `pub mod bench` (hidden in docs) for use by benches/skew.rs
# and the out-of-repo Lambda handler. Implies std. Not intended for end users.
bench-internal = ["dep:serde", "dep:quanta", "dep:minstant", "dep:fastant", "dep:core_affinity"]

[dev-dependencies]
criterion = "0.8"
fastant = "0.1.11"
minstant = "0.1.7"
quanta = "0.12.6"
serde_json = "1"

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }

[[bench]]
name = "instant"
harness = false

[[bench]]
name = "skew"
harness = false
required-features = ["bench-internal"]

[[example]]
name = "basic"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
