[package]
name = "tach"
version = "0.2.0"
edition = "2024"
# Stable PowerPC64 inline assembly is part of the default clock provider.
rust-version = "1.95"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Spencer Creasey"]
repository = "https://github.com/spence/tach"
description = "Fast timers for local elapsed, ordered cross-thread, and current-thread CPU time"
keywords = ["timer", "clock", "profiling", "instant", "thread-cpu"]
categories = ["hardware-support", "development-tools::profiling"]
include = [
  "/src/**",
  "/tests/**",
  "/examples/**",
  "/benches/instant.rs",
  "/benches/skew.rs",
  "/README.md",
  "/BENCHMARKS.md",
  "/benches/ORDERED-VERIFICATION.md",
  "/benches/speed-*.json",
  "/benches/three-clock-evidence.json",
  "/benches/summary-thread-cpu.png",
  "/benches/summary-use-cases.png",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]

[dependencies]
# All optional benchmark-only dependencies. `bench-internal` exposes tach's
# provider evidence without forcing every reference crate to compile on every
# advertised target. `bench-quanta` adds the one reference whose target matrix
# is narrower than tach's.
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
quanta = { version = "0.12.6", optional = true }
minstant = { version = "0.1.7", optional = true }
fastant = { version = "0.1.11", optional = true }
core_affinity = { version = "0.8", optional = true }

[features]
default = ["thread-cpu-inline"]
# DEFAULT: Linux x86, x86_64, aarch64, armv7, riscv64, s390x, LoongArch64,
# and PowerPC64 plus Android x86_64 and aarch64 measure each current thread's
# complete perf task-clock mmap/read routes against its selected
# CLOCK_THREAD_CPUTIME_ID route, then retain only a repeatable material winner
# for that thread.
# Other targets ignore this feature. Disable default features to keep those
# targets on the syscall-only no_std implementation.
thread-cpu-inline = []
# OPT-IN: compile the cross-thread `OrderedInstant` provider for Emscripten
# pthread/shared-memory builds. Stable rustc accepts `-C target-feature=+atomics`
# for code generation but does not expose that unstable target feature through
# `cfg(target_feature)`, so pthread consumers must enable this Cargo feature as
# the source-level half of the build handshake. They remain responsible for
# passing Emscripten's pthread and Wasm-atomics compile/link flags.
emscripten-pthreads = []
# OPTIONAL: spawn a background thread that periodically recalibrates the
# tick-to-nanosecond scaling against the platform monotonic clock to correct
# for crystal drift over long uptime. Default interval is 60 seconds;
# configurable at runtime via `tach::set_recalibration_interval`.
#
# WARNING: ENABLING THIS FEATURE BREAKS `#![no_std]` COMPATIBILITY.
# It pulls in `std::thread`, `std::sync::OnceLock`, and `std::time::Duration`
# for the spawn / sleep loop. This feature promotes tach to `std` on every
# target. If you need drift correction on a no_std target, call
# `tach::Instant::recalibrate()` manually from your own scheduler — that
# function is itself no_std-compatible.
recalibrate-background = []
# INTERNAL: exposes `pub mod bench` (hidden in docs) for use by benches/skew.rs
# and the out-of-repo Lambda handler. Implies std. Not intended for end users.
bench-internal = ["dep:serde", "dep:minstant", "dep:fastant", "dep:core_affinity"]
# INTERNAL: enable quanta-backed skew probes only on targets quanta supports.
bench-quanta = ["bench-internal", "dep:quanta"]

[dev-dependencies]
criterion = "0.8"
fastant = "0.1.11"
minstant = "0.1.7"
quanta = "0.12.6"
serde_json = "1"

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi", target_env = "p2"))'.dependencies]
wasip2 = { version = "=1.0.1", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[[bench]]
name = "instant"
harness = false

[[bench]]
name = "skew"
harness = false
required-features = ["bench-quanta"]

[[example]]
name = "basic"

[package.metadata.docs.rs]
features = ["recalibrate-background"]
rustdoc-args = ["--cfg", "docsrs"]
