[package]
name = "tach-lambda-speed"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
lambda_runtime = "0.13"
libc = "0.2"
fastant = "0.1.11"
minstant = "0.1.7"
quanta = "0.12.6"
serde_json = "1"
tach = { path = "../..", features = ["bench-internal", "thread-cpu-inline"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
