[package]
name = "tach-runtime-smoke"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
publish = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "tach-runtime-smoke-wasip1-threads"
path = "src/bin/wasip1_threads.rs"
required-features = ["wasip1-threads"]

[features]
default = ["tach-default"]
tach-default = ["tach/thread-cpu-inline"]
wasip1-threads = ["dep:serde_json"]

[dependencies]
tach = { path = "../..", default-features = false }
wasm-bindgen = { version = "=0.2.114", default-features = false }
serde_json = { version = "1", optional = true }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
